# handson-rust

./: .editorconfig  Cargo.toml  Makefile  README.md
.cargo/: config.toml
.github/workflows/: test.yml
src/: main.rs
